--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,33 @@
       name="description"
       content="Unlock Your Potential, One Checkpoint at a time!"
     />
+    <meta
+      name="keywords"
+      content="achivio, roadmap builder, build roadmap, custom roadmap, task tracker, roadmap, goal tracker, goal tracking, task tracking, progress tracker, progress tracking"
+    />
+    <meta property="og:title" content="Achivio" />
+    <meta
+      property="og:description"
+      content="Unlock Your Potential, One Checkpoint at a time!"
+    />
+    <meta property="og:image" content="./home.webp" />
+    <meta property="og:url" content="https://achivio.vercel.app" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Achivio" />
+    <meta name="twitter:description" content="Unlock Your Potential, One Checkpoint at a time!" />
+    <meta name="twitter:image" content="./home.webp" />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
     <title>Achivio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
   </body>
 </html>
